fix fixture test
